fix update rôm