@@ -52,31 +52,32 @@ public class BookingController {
 
     @GetMapping("/admin/booking/list")
     public ApiResponse<List<BookingDTO>> getBookings() {
-        return new ApiResponse<>(200,"Lấy danh sách thành công", bookingService.getAllBookings());
+        return new ApiResponse<>(200, "Lấy danh sách thành công", bookingService.getAllBookings());
     }
 
     @PostMapping("/admin/booking/order")
     public ApiResponse<BookingDTO> orderBooking(@RequestBody OrderBookingWrapper request) {
         try {
             Booking booking = bookingService.orderBooking(
-                request.getGuestBookingRequest(),
-                request.getBookingRequest(),
-                request.getBookingDetailRequest(),
-                request.getBookingFacilityRequest(),
-                request.getStayRequest());
-            
-            Booking booking2 = bookingRepository.findById(booking.getId()).orElseThrow(() -> new AppException(ErrorCode.BOOKINGDETAIL_NOT_EXISTED));
+                    request.getGuestBookingRequest(),
+                    request.getBookingRequest(),
+                    request.getBookingDetailRequest(),
+                    request.getBookingFacilityRequest(),
+                    request.getStayRequest());
+
+            Booking booking2 = bookingRepository.findById(booking.getId())
+                    .orElseThrow(() -> new AppException(ErrorCode.BOOKINGDETAIL_NOT_EXISTED));
             BookingDTO bookingDTO = bookingMapper.toResponse(booking2);
             List<BookingFacility> bookingFacilities = bookingFacilityRepository.findByBookingId(booking2.getId());
             List<BookingFacilitiesDTO> bookingFacilitiesDTOs = bookingFacilities.stream()
-                            .map(f -> {
-                                BookingFacilitiesDTO bookingFacilitiesDTO = bookingFacilityMapper.toDto(f);
-                                Optional<Facility> facilities = facilityRepository.findById(f.getFacility().getId());
-                                List<FacilitiesDTO> facilitiesDTOs = facilities.map(facilityMapper::toFacilitiesDTO)
-                                        .stream().toList();
-                                bookingFacilitiesDTO.setFacilities(facilitiesDTOs);
-                                return bookingFacilitiesDTO;
-                            }).collect(Collectors.toList());
+                    .map(f -> {
+                        BookingFacilitiesDTO bookingFacilitiesDTO = bookingFacilityMapper.toDto(f);
+                        Optional<Facility> facilities = facilityRepository.findById(f.getFacility().getId());
+                        List<FacilitiesDTO> facilitiesDTOs = facilities.map(facilityMapper::toFacilitiesDTO)
+                                .stream().toList();
+                        bookingFacilitiesDTO.setFacilities(facilitiesDTOs);
+                        return bookingFacilitiesDTO;
+                    }).collect(Collectors.toList());
             bookingDTO.setBookingFacilities(bookingFacilitiesDTOs);
 
             return new ApiResponse<>(HttpStatus.SC_OK, "đặt phòng thành công", bookingDTO);
@@ -84,7 +85,6 @@ public class BookingController {
             return new ApiResponse<>(HttpStatus.SC_BAD_REQUEST, e.getMessage(), null);
         }
 
-        
     }
 
     @GetMapping("/admin/booking/bookingbycheckin")
@@ -94,7 +94,8 @@ public class BookingController {
 
     @GetMapping("/admin/booking/availableRoomsTypeAndDate")
     public ApiResponse<Long> countAvailableRooms(@RequestParam String nameRoomType, @RequestParam LocalDateTime date) {
-        return new ApiResponse<>(200, "Tính toán số lượng phòng còn trống", bookingService.countAvailableRoomsByRoomTypeAndDate(nameRoomType, date));
+        return new ApiResponse<>(200, "Tính toán số lượng phòng còn trống",
+                bookingService.countAvailableRoomsByRoomTypeAndDate(nameRoomType, date));
     }
 
     @GetMapping("/availableRoomsTypeAndDateV2")
@@ -103,12 +104,10 @@ public class BookingController {
         return new ApiResponse<>(200, "Lấy danh sách thành công", bookingService.getAvailableRooms(fromDate, toDate));
     }
 
-
     @GetMapping("/booking/{id}")
     public ApiResponse<BookingDTO> getBooking(@PathVariable Long id) {
         return new ApiResponse<>(200, "Lấy thông tin thành công", bookingService.getBooking(id));
     }
-
 
     // tính tiền ở thực tế
     @PutMapping("/update-booking/{id}")
@@ -119,23 +118,38 @@ public class BookingController {
     // tính tiền sau khi update booking detail
     @PutMapping("/afterUBD/{id}")
     public ApiResponse<BookingDTO> updatePriceAfterUpdateBD(@PathVariable Long id) {
-        return new ApiResponse<>(HttpStatus.SC_OK, "Cập nhật giá thành công", bookingService.updateTotalPriceBookingAfter(id));
+        return new ApiResponse<>(HttpStatus.SC_OK, "Cập nhật giá thành công",
+                bookingService.updateTotalPriceBookingAfter(id));
     }
 
     @PutMapping("/afterUBD2/{id}")
     public ApiResponse<BookingDTO> updatePriceAfterUpdateBD2(@PathVariable Long id) {
-        return new ApiResponse<>(HttpStatus.SC_OK, "Cập nhật giá thành công", bookingService.updateTotalPriceBookingAfter2(id));
+        return new ApiResponse<>(HttpStatus.SC_OK, "Cập nhật giá thành công",
+                bookingService.updateTotalPriceBookingAfter2(id));
     }
 
     @PutMapping("/cancel/{id}")
     public ApiResponse<BookingDTO> cancelBooking(@PathVariable Long id) {
-        return new ApiResponse<>(HttpStatus.SC_OK, "Hủy đặt phòng thành công", bookingService.setStatusBookingCancel(id));
+        return new ApiResponse<>(HttpStatus.SC_OK, "Hủy đặt phòng thành công",
+                bookingService.setStatusBookingCancel(id));
     }
 
     @PutMapping("/checkout/{id}")
     public ApiResponse<?> checkoutBooking(@PathVariable Long id) {
         try {
             return new ApiResponse<>(HttpStatus.SC_OK, "Checkout thành công", bookingService.checkoutBookingStatus(id));
+        } catch (Exception e) {
+            return new ApiResponse<>(HttpStatus.SC_BAD_REQUEST, "Insufficient payment, Please pay the full amount",
+                    null);
+        }
+
+    }
+
+    @PutMapping("/status-checkout/{id}")
+    public ApiResponse<?> checkoutBookingCheckout(@PathVariable Long id) {
+        try {
+            return new ApiResponse<>(HttpStatus.SC_OK, "Checkout thành công",
+                    bookingService.checkoutBookingStatusCheckout(id));
         } catch (Exception e) {
             return new ApiResponse<>(HttpStatus.SC_BAD_REQUEST, "Insufficient payment, Please pay the full amount",
                     null);
